content/containers/aks-6-part-series/scripts/1-networking/osm-policy-deny-bookthief.yaml
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: mysql
  namespace: bookwarehouse
spec:
  matches:
    ports:
    - 3306
